--- a/app.json
+++ b/app.json
@@ -1,8 +1,10 @@
 {
   "expo": {
-    "name": "santander-branches",
-    "slug": "santander-branches",
+    "owner": "christianchown-santander",
+    "name": "Santander React Native challenge",
+    "slug": "santander-rn-challenge",
     "version": "1.0.0",
+    "platforms": ["ios", "android"],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -13,20 +15,27 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Allow Santander Branches to use your location",
+        "NSLocationAlwaysUsageDescription": "Allow Santander Branches to use your location",
+        "NSLocationWhenInUseUsageDescription": "Allow Santander Branches to use your location"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "API_KEY"
+        }
+      },
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "jsEngine": "hermes"
   }
 }
