--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@xstate/react": "^3.0.1",
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -23,14 +24,15 @@
     "jest-expo": "^44.0.1",
     "react": "17.0.2",
     "react-native": "0.64.3",
-    "react-native-maps": "0.29.4"
+    "react-native-maps": "0.29.4",
+    "xstate": "^4.33.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@expo/webpack-config": "^0.16.16",
     "@types/jest": "^27.4.0",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
